Replace java.util maps/lists in Graph with custom HashTable and Deque; add GraphMatrix and tests